2012-01-27  Andrew Okin  <razorblades13@gmail.com>

	* StyleUtils.cs, MainWindow.cs, ConsoleWindow.cs: Made the
	  context menus less ugly

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs, ConsoleWindow.cs: Added icons to windows

	* gui.stetic: 

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* ConsoleWindow.cs: Fixed a crash when starting an instance

	* MainWindow.cs: Fixed a crash that occurred when certain
	  files did not exist on startup.

	* SettingsDialog.cs: JavaPath is now set properly

	* MultiMC.csproj: Removed the formatting policy from the
	  project files. Please import the policy from the solution
	  instead.

	* AppSettings.cs: Code formatting changes

	* Resources.cs: Added config file and the url to download
	  DotNetZip from

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* Task.cs: Renamed the ProcessThread property to TaskThread to
	  make it less confusing.

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.ico: Added the icon (MonoDevelop apparently decided
	  it didn't like my icon and didn't add it to git...)

2012-01-25  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs, ConsoleWindow.cs: Added console

	* Multicraft.ico: Added icon

	* MultiMC.csproj, gui.stetic, MultiMC.MainWindow.cs,
	  MultiMC.ConsoleWindow.cs, MultiMC.EditNotesDialog.cs: 

	* Instance.cs: Formatting changes
	Removed unused code

2012-01-23  Andrew Okin  <razorblades13@gmail.com>

	* Forkk.mdpolicy: Added formatting policy file so that others
	  using MonoDevelop can use the same formatting policy as me.

2012-01-22  Andrew Okin  <razorblades13@gmail.com>
	* EditNotesDialog.cs: Added instance notes

2012-01-22  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs: Adding mods now rebuilds minecraft.jar


2012-01-22  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs: You can now install mods through a file
	chooser by right clicking on an instance and clicking "Add
	Mods"
